// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <SearchScreen /> debe de llamar el push del history 1`] = `
Array [
  "",
  <div
    className="container"
  >
    <div>
      <h1>
        Search Screen
      </h1>
    </div>
    <div
      className="row"
    >
      <div
        className="col-md-5 col-sm-12"
      >
        <h4>
          Search Form
        </h4>
        <hr />
        <form
          onSubmit={[Function]}
        >
          <input
            className="form-control"
            id="searchText"
            name="searchText"
            onChange={[Function]}
            placeholder="Find your hero"
            type="text"
            value=""
          />
          <button
            className="btn m-1 btn-block btn-outline-primary"
            type="submit"
          >
            Search...
          </button>
        </form>
      </div>
      <div
        className="col-md-7 col-sm-12"
      >
        <h4>
          Results...
        </h4>
        <hr />
        <div
          className="alert alert-info"
        >
          Search a Hero
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`Pruebas en <SearchScreen /> debe de mostrar a "batman" y el Input con el valor del "queryString" 1`] = `
<div
  className="container"
>
  <div>
    <h1>
      Search Screen
    </h1>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-5 col-sm-12"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          className="form-control"
          id="searchText"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-md-7 col-sm-12"
    >
      <h4>
        Results...
      </h4>
      <hr />
      <div
        className="card mb-3"
        style={
          Object {
            "maxWidth": 540,
          }
        }
      >
        <div
          className="row g-0"
        >
          <div
            className="col-md-7 col-sm-12"
          >
            <img
              alt="Batman"
              className="card-img-top"
              src="./assets/heroes/dc-batman.jpg"
            />
          </div>
          <div
            className="col-md-5 col-sm-12"
          >
            <div
              className="card-body"
            >
              <h5
                className="card-title w-100"
              >
                Batman
              </h5>
              <p
                className="card-text"
              >
                Bruce Wayne
              </p>
              <hr />
              <p
                className="card-text"
              >
                <small
                  className="text-muted"
                >
                  Detective Comics #27
                </small>
              </p>
              <a
                className=""
                href="/hero/dc-batman"
                onClick={[Function]}
              >
                Más...
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> debe de mostrar un error si no se encuentra el hero 1`] = `
<div
  className="container"
>
  <div>
    <h1>
      Search Screen
    </h1>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-5 col-sm-12"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          className="form-control"
          id="searchText"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value="batman123123"
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-md-7 col-sm-12"
    >
      <h4>
        Results...
      </h4>
      <hr />
      <div
        className="alert alert-warning"
      >
        No results for 
        batman123123
      </div>
    </div>
  </div>
</div>
`;

exports[`Pruebas en <SearchScreen /> debe de mostrarse correctamente con valores por defecto 1`] = `
<div
  className="container"
>
  <div>
    <h1>
      Search Screen
    </h1>
  </div>
  <div
    className="row"
  >
    <div
      className="col-md-5 col-sm-12"
    >
      <h4>
        Search Form
      </h4>
      <hr />
      <form
        onSubmit={[Function]}
      >
        <input
          className="form-control"
          id="searchText"
          name="searchText"
          onChange={[Function]}
          placeholder="Find your hero"
          type="text"
          value=""
        />
        <button
          className="btn m-1 btn-block btn-outline-primary"
          type="submit"
        >
          Search...
        </button>
      </form>
    </div>
    <div
      className="col-md-7 col-sm-12"
    >
      <h4>
        Results...
      </h4>
      <hr />
      <div
        className="alert alert-info"
      >
        Search a Hero
      </div>
    </div>
  </div>
</div>
`;
